--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.5",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-resizable": "^3.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "typescript": "^5"
